--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,9 +12,6 @@ jobs:
 
       - name: ssh
         run: |
-          mkdir .ssh
-          touch authorized_keys
-          cp {{ secrets.AUTH_KEY }} .ssh/authorized_keys
-          ssh ubuntu@192.168.5.96
           ls
+          pwd
           
