--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,4 +13,8 @@ jobs:
       - name: ssh
         run: |
           pwd
-          ssh-keygen
+          cd /home/runner/.ssh
+          mkdir authorized_keys
+          cp {{ secrets.AUTH_KEY }} /home/runner/.ssh/authorized_keys
+          cd
+          ls
